[fix](lance) Use Java 8 compatible test collection